--- a/recipe_display/recipes.html
+++ b/recipe_display/recipes.html
@@ -11,6 +11,7 @@
     <body>
         <button id="hummus">Hummus</button>
         <button id="pico">Pico</button>
+        <button id="pad_thai">Pad Thai</button>
 
         <article id="recipe">
             <header>
