--- a/recipe_creator/recipe_creator.html
+++ b/recipe_creator/recipe_creator.html
@@ -40,7 +40,7 @@
                     <label>Author Site:</label>
                     <input type="text" name="credit[author_link]"><br><br>
                     <label>Link to recipe:</label>
-                    <input type="text" name="credit[link]"><br><br>
+                    <input type="text" name="credit[recipe_link]"><br><br>
 
                     <button type="submit">Create Recipe</button>
                     <input type="submit" name="submit" value="Submit">
