recipe file format finished

--- a/recipe_display/recipes.html
+++ b/recipe_display/recipes.html
@@ -18,24 +18,56 @@
                 <h1 id="title">Recipes</h1>
             </header>
 
-            <section id="ingredients" class="seperator">
+            <section id="time">
+                <pre></pre>
+            </section>
+
+            <section id="classification">
+                <p></p>
+            </section>
+
+            <section id="allergens">
+                <p></p>
+            </section>
+
+            <section id="suitability">
+                <p></p>
+            </section>
+
+            <section id="equipment">
+                <pre></pre>
+            </section>
+
+            <section id="storage">
+                <p></p>
+            </section>
+
+            <section id="expiration">
+                <pre></pre>
+            </section>
+
+            <section id="ingredients">
+                <hr>
                 <h2>Ingredients</h2>
                 <ul id="ingredients_list"></ul>
             </section>
 
 
-            <section id="instructions" class="separator">
+            <section id="instructions">
+                <hr>
                 <h2>Instructions</h2>
                 <ol id="instructions_list"></ol>
             </section>
 
-            <section id="additional_info" class="separator">
+            <section id="additional_info">
+                <hr>
                 <h2>Additional Info</h2>
                 <p></p>
             </section>
 
             <footer>
-                <section id="credit" class="separator">
+                <section id="credit">
+                    <hr>
                     <h3 id="credit_header">Credit</h3>
                     <p>Author: <a></a></p>
                     <p>Link to recipe: <a></a></p>
